# identity-model

./: .env.descope.example  .env.identityserver  .env.node-oidc  .env.ory.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PROMPT.md  README.md  ralph.yml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: getting-started.md
go/: .golangci.yml  README.md  go.mod  go.sum
go/examples/client-credentials/: main.go
go/examples/discovery/: main.go
go/examples/dpop/: main.go
go/examples/hello/: main.go
go/examples/introspection/: main.go
go/examples/jwks/: main.go
go/examples/jwt-validation/: main.go
go/examples/pkce/: main.go
go/examples/revocation/: main.go
go/examples/token-exchange/: main.go
go/examples/userinfo/: main.go
go/internal/: doc.go
go/internal/integrationtest/: integrationtest.go
go/pkg/discovery/: cache.go  discovery.go  discovery_integration_test.go  discovery_test.go  doc.go  errors.go  options.go
go/pkg/dpop/: doc.go  dpop_integration_test.go  dpop_test.go  errors.go  key.go  proof.go  transport.go  verify.go
go/pkg/introspection/: doc.go  errors.go  introspection.go  introspection_integration_test.go  introspection_test.go  options.go  response.go  response_test.go
go/pkg/jwks/: cache.go  doc.go  errors.go  jwks.go  jwks_integration_test.go  jwks_test.go  options.go
go/pkg/jwt/: claims.go  doc.go  errors.go  jwt.go  jwt_integration_test.go  jwt_test.go  options.go
go/pkg/revocation/: doc.go  errors.go  options.go  revocation.go  revocation_integration_test.go  revocation_test.go
go/pkg/token/: doc.go  errors.go  options.go  pkce.go  pkce_test.go  response.go  token.go  token_exchange_integration_test.go  token_exchange_test.go  token_integration_test.go  token_test.go
go/pkg/userinfo/: doc.go  errors.go  options.go  response.go  userinfo.go  userinfo_integration_test.go  userinfo_test.go
infra/: Dockerfile  README.md  docker-compose.yml  provider.js
infra/identityserver/: Dockerfile  IdentityServer.csproj  Program.cs
infra/node-oidc-provider/: .env.example  package.json
rust/: Cargo.toml  README.md  deny.toml
rust/examples/: basic_setup.rs  client_credentials.rs  discovery.rs  jwks.rs  userinfo.rs  validate_token.rs
rust/src/: error.rs  lib.rs
rust/src/discovery/: cache.rs  client.rs  metadata.rs  mod.rs
rust/src/jwks/: cache.rs  client.rs  key.rs  mod.rs
rust/src/jwt/: claims.rs  mod.rs  options.rs
rust/src/token/: mod.rs  pkce.rs  response.rs
rust/src/userinfo/: mod.rs  response.rs
rust/tests/: discovery.rs  jwks.rs  jwt_validation.rs  scaffolding.rs  token_client.rs  userinfo.rs
spec/: README.md  capabilities.md
spec/conformance/: authorization-code.json  client-credentials.json  discovery.json  dpop.json  introspection.json  jwks.json  revocation.json  token-exchange.json  userinfo.json  validation.json
(+38 files in other folders)
