[package]
# Published to crates.io as `identity-model-rs` to keep a distinct, namespaced
# registry identity (crates.io has no vendor scoping). The library import name
# stays `identity_model` via [lib] below, so `use identity_model::...` is unchanged.
name = "identity-model-rs"
version = "0.0.1"
edition = "2024"
rust-version = "1.91"
description = "Production-grade, RFC-compliant OIDC/OAuth2 client library for Rust"
license = "Apache-2.0"
repository = "https://github.com/jamescrowley321/identity-model"
keywords = ["oidc", "oauth2", "jwt", "openid", "authentication"]
categories = ["authentication", "web-programming"]

[lib]
name = "identity_model"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.11.0"
getrandom = "0.4.3"

[dev-dependencies]
p256 = { version = "0.14.0", features = ["pkcs8", "ecdsa"] }
rsa = "0.9"
tokio = { version = "1", features = ["full"] }
url = "2.5.8"
wiremock = "0.6.5"
